# ai-resume-generator

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
backend/: main.py  pdf.py
static/: index.html
static/css/: style.css
static/js/: app.js
